Added Contact form

--- a/index.html
+++ b/index.html
@@ -217,6 +217,22 @@
   <!-- Contact -->
 <section id="contact" class="section contact">
   <h2>Contact Me</h2>
+
+  <form name="contact" netlify>
+  <p>
+    <label>Name <input type="text" name="name" id="name" required /></label>
+  </p>
+  <p>
+    <label>Email <input type="email" name="email" id="email" required /></label>
+  </p>
+  <p>
+    <label>Message <textarea name="message" id="message" required></textarea></label>
+  </p>
+  <p>
+    <button type="submit">Send</button>
+  </p>
+</form>
+
   <div class="links">
     <a href="https://github.com/tharushaprabodhyaya" target="_blank">GitHub</a>
     <a href="https://www.linkedin.com/in/tharushaprabodhyaya/" target="_blank">LinkedIn</a>
