Added new content

--- a/index.html
+++ b/index.html
@@ -93,18 +93,34 @@
   <div class="container">
          <div class="card__container">
             <article class="card__article">
-               <img src="images/smplilearnLogo.png" alt="image" class="card__img">
+               <img src="images/uomLogo.png" alt="image" class="card__img">
+               <div class="card__data">
+                  <span class="card__description">University of Moratuwa</span>
+                  <h2 class="card__title">Web Design for Beginners</h2>
+                  <a href="https://open.uom.lk/verify" target="_blank" class="card__button">View Certificate</a>
+               </div> 
+            </article>
 
+            <article class="card__article">
+               <img src="images/smplilearnLogo.png" alt="image" class="card__img">
                <div class="card__data">
                   <span class="card__description">Simplilearn</span>
                   <h2 class="card__title">Introduction to Graphic Design; Basics of UI/UX</h2>
-                  <a href="https://www.simplilearn.com/skillup-certificate-landing?token=eyJjb3Vyc2VfaWQiOiIzNDA1IiwiY2VydGlmaWNhdGVfdXJsIjoiaHR0cHM6XC9cL2NlcnRpZmljYXRlcy5zaW1wbGljZG4ubmV0XC9zaGFyZVwvOTM3NDQ3MF85NjczOTczMTc2Mjg1MDQyNDk1MS5wbmciLCJ1c2VybmFtZSI6IkdIRyBUSEFSVVNIQSBQUkFCT0RIWUFZQSJ9&utm_source=shared-certificate&utm_medium=lms&utm_campaign=shared-certificate-promotion&referrer=https%3A%2F%2Flms.simplilearn.com%2Fcourses%2F6307%2FIntroduction-to-Graphic-Design%253B-Basics-of-UI%252FUX%2Fcertificate%2Fdownload-skillup&%24web_only=true&_branch_match_id=1452523666955353454&_branch_referrer=H4sIAAAAAAAAA8soKSkottLXL87MLcjJ1EssKNDLyczL1k%2FVT%2FTNdknyrfRMjkyyrytKTUstKsrMS49PKsovL04tsvUBqkpN8cwDABEK1utBAAAA" target="_blank" class="card__button">View Certificate</a>
-                  
+                  <a href="https://www.simplilearn.com/skillup-certificate-landing?token=eyJjb3Vyc2VfaWQiOiIzNDA1IiwiY2VydGlmaWNhdGVfdXJsIjoiaHR0cHM6XC9cL2NlcnRpZmljYXRlcy5zaW1wbGljZG4ubmV0XC9zaGFyZVwvOTM3NDQ3MF85NjczOTczMTc2Mjg1MDQyNDk1MS5wbmciLCJ1c2VybmFtZSI6IkdIRyBUSEFSVVNIQSBQUkFCT0RIWUFZQSJ9&utm_source=shared-certificate&utm_medium=lms&utm_campaign=shared-certificate-promotion&referrer=https%3A%2F%2Flms.simplilearn.com%2Fcourses%2F6307%2FIntroduction-to-Graphic-Design%253B-Basics-of-UI%252FUX%2Fcertificate%2Fdownload-skillup&%24web_only=true&_branch_match_id=1452523666955353454&_branch_referrer=H4sIAAAAAAAAA8soKSkottLXL87MLcjJ1EssKNDLyczL1k%2FVT%2FTNdknyrfRMjkyyrytKTUstKsrMS49PKsovL04tsvUBqkpN8cwDABEK1utBAAAA" target="_blank" class="card__button">View Certificate</a>  
                </div>
             </article>
+
+            <article class="card__article">
+               <img src="images/googleLogo.webp" alt="image" class="card__img">
+               <div class="card__data">
+                  <span class="card__description">Google</span>
+                  <h2 class="card__title">Gemini Certified University Student</h2>
+                  <a href="https://edu.google.accredible.com/7717e16d-a51c-4b08-ae61-5f48f6bc770a#acc.DL3Yjbdy" target="_blank" class="card__button">View Certificate</a>
+               </div> 
+            </article>
+
             <article class="card__article">
                <img src="images/greatlearningLogo.jpg" alt="image" class="card__img">
-
                <div class="card__data">
                   <span class="card__description">Great Learning</span>
                   <h2 class="card__title">Frontend Development-HTML</h2>
@@ -114,22 +130,10 @@
 
             <article class="card__article">
                <img src="images/sololearnLogo.jpg" alt="image" class="card__img">
-
                <div class="card__data">
                   <span class="card__description">SoloLearn</span>
                   <h2 class="card__title">Introduction to SQL</h2>
                   <a href="https://www.sololearn.com/en/certificates/CC-0S9FMWOJ" target="_blank" class="card__button">View Certificate</a>
-               </div>
-            </article>
-
-            <article class="card__article">
-               <img src="images/googleLogo.webp" alt="image" class="card__img">
-
-               <div class="card__data">
-                  <span class="card__description">Google</span>
-                  <h2 class="card__title">Gemini Certified University Student</h2>
-                  <a href="https://edu.google.accredible.com/7717e16d-a51c-4b08-ae61-5f48f6bc770a#acc.DL3Yjbdy" target="_blank" class="card__button">View Certificate</a>
-               </div>
                </div>
             </article>
          </div>
