optimize images sizes

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tharusha Prabodhyaya</title>
-  <link rel="icon" type="image/png" href="images/ProfilePic2.png">
+  <link rel="icon" type="image/png" href="images/ProfilePic.png">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-</head>
+</head> 
 <body>
 
 <!-- Navigation Bar -->
@@ -48,7 +48,7 @@
   </div>
 
   <div class="hero-image">
-    <img src="images/ProfilePic2.png" alt="Profile Image">
+    <img src="images/ProfilePic.png" alt="Profile Image">
   </div>
 </section>
 
