Add WhatsApp chat integration and update web version

--- a/index.html
+++ b/index.html
@@ -237,6 +237,10 @@
   </p>
 </form>
 
+<!-- WhatsApp Chat -->
+<script src="https://elfsightcdn.com/platform.js" async></script>
+<div class="elfsight-app-6c960ae8-dede-4bbe-88b6-5282baa1e2cd" data-elfsight-app-lazy></div>
+
   <div class="links">
     <a href="https://github.com/tharushaprabodhyaya" target="_blank">GitHub</a>
     <a href="https://www.linkedin.com/in/tharushaprabodhyaya/" target="_blank">LinkedIn</a>
@@ -246,8 +250,11 @@
   </div>
 </section>
 
+
 <footer>
-  <p class="footer">&copy; 2026 Tharusha Prabodhyaya. All rights reserved.</p>
+  <p class="footer">&copy; 2026 Tharusha Prabodhyaya. All rights reserved.<br>
+    ✨ v1.2.0 
+  </p>
 </footer>
 
 <script src="script.js"></script>
